[notebook] interest automatic classification.

--- a/classify_title.ipynb
+++ b/classify_title.ipynb
@@ -19,13 +19,19 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "pd.set_option('display.max_rows', 500)\n",
+    "\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
+    "from unidecode import unidecode\n",
+    "\n",
     "from transformers import BertTokenizer, BertForSequenceClassification\n",
     "import torch\n",
     "\n",
-    "from utils import (\n",
-    "    parse_podcats, parse_transcript\n",
+    "from scraping import (\n",
+    "    parse_podcats\n",
     ")"
    ]
   },
@@ -36,8 +42,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url_podcasts = \"https://lexfridman.com/podcast\"\n",
-    "url_yann_lecun = \"https://lexfridman.com/yann-lecun-3-transcript\""
+    "url_podcasts = \"https://lexfridman.com/podcast\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "049ac44c",
+   "metadata": {},
+   "source": [
+    "Retrieving of the podcasts."
    ]
   },
   {
@@ -65,8 +78,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9a832ed6",
+   "metadata": {},
+   "source": [
+    "First attempt at classifying the podcasts based on their title."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "8ed87427",
    "metadata": {},
    "outputs": [
@@ -90,17 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "e65bc54a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "title = titles[]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "94ade93e",
    "metadata": {},
    "outputs": [
@@ -150,6 +161,8 @@
    "id": "814c3fe0",
    "metadata": {},
    "source": [
+    "**Plan of action:**\n",
+    "\n",
     "- Fine tune distilled Bert.\n",
     "    - create a training set.\n",
     "        - Use guest to labellize past titles.\n",
@@ -157,6 +170,205 @@
     "        - scrap some data.\n",
     "    - Do the fine tuning\n",
     "- Test it of a validation set.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf032e27",
+   "metadata": {},
+   "source": [
+    "#### Training dataset creation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "9a038dbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_podcast = pd.DataFrame(podcasts)\n",
+    "df_podcast.insert(0, 'id', df_podcast.reset_index(drop=True).index + 1)\n",
+    "\n",
+    "cols_to_pp = [\"guest\", \"title\"]\n",
+    "\n",
+    "for col in cols_to_pp:\n",
+    "    df_podcast[col] = np.vectorize(lambda title: unidecode(title))(df_podcast[col])\n",
+    "    df_podcast[col] = df_podcast[col].str.lower()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86de5a9b",
+   "metadata": {},
+   "source": [
+    "The positive titles will be:\n",
+    "- titles of podcast whose guest is a AI/ML/DS person I am interested in.\n",
+    "\n",
+    "or\n",
+    "\n",
+    "- titles with ML terms that I will validate by hand."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "de92e506",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_science_guests = [\n",
+    "    \"Aravind Srinivas\",\n",
+    "    \"Sam Altman\",\n",
+    "    \"Yann LeCun\",\n",
+    "    \"Joscha Bach\",\n",
+    "    \"Max Tegmark\",\n",
+    "    \"Noam Brown\",\n",
+    "    \"Rana el Kaliouby\",\n",
+    "    \"Ray Kurzweil\",\n",
+    "    \"Oriol Vinyals\",\n",
+    "    \"Demis Hassabis\",\n",
+    "    \"Travis Oliphant\",\n",
+    "    \"Jay McClelland\",\n",
+    "    \"Douglas Lenat\",\n",
+    "    \"Wojciech Zaremba\",\n",
+    "    \"Ishan Misra\",\n",
+    "    \"Risto Miikkulainen\",\n",
+    "    \"Max Tegmark\",\n",
+    "    \"Dan Kokotov\",\n",
+    "    \"Michael Littman\",\n",
+    "    \"Charles Isbell\",\n",
+    "    \"François Chollet\",\n",
+    "    \"Dileep George\",\n",
+    "    \"Jitendra Malik\",\n",
+    "    \"Sergey Levine\",\n",
+    "    \"Matt Botvinick\",\n",
+    "    \"Ben Goertzel\",\n",
+    "    \"Dawn Song\",\n",
+    "    \"Ilya Sutskever\",\n",
+    "    \"Daphne Koller\",\n",
+    "    \"David Silver\",\n",
+    "    \"Marcus Hutter\",\n",
+    "    \"Michael I. Jordan\",\n",
+    "    \"Andrew Ng\",\n",
+    "    \"Gary Marcus\",\n",
+    "    \"Peter Norvig\",\n",
+    "    \"Regina Barzilay\",\n",
+    "    \"Jeremy Howard\",\n",
+    "    \"Rajat Monga\",\n",
+    "    \"Ian Goodfellow\",\n",
+    "    \"Greg Brockman\",\n",
+    "    \"Tomaso Poggio\",\n",
+    "    \"Juergen Schmidhuber\",\n",
+    "    \"Pieter Abbeel\",\n",
+    "    \"Stuart Russell\",\n",
+    "    \"Yoshua Bengio\",\n",
+    "    \"Vladimir Vapnik\",\n",
+    "]\n",
+    "data_science_guests_pp = [unidecode(guest).lower() for guest in data_science_guests]\n",
+    "\n",
+    "words_to_check = [\n",
+    "    \"Neural Nets\",\n",
+    "    \"neural networks\",\n",
+    "    \"Deep Learning\",\n",
+    "    \"Machine learning\",\n",
+    "    \"Reinforcement Learning\",\n",
+    "    \"Data science\",\n",
+    "    \"AI\",\n",
+    "    \"AGI\",\n",
+    "    \"artificial intelligence\"\n",
+    "]\n",
+    "words_to_check_pp = [unidecode(word).lower() for word in words_to_check]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9eeec3bf",
+   "metadata": {},
+   "source": [
+    "Manual validation based on regex."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "20a21555",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "re_not_character_or_beginning = r'(?:[^a-z]|^)'\n",
+    "re_not_character_or_end = r'(?:[^a-z]|$)'\n",
+    "\n",
+    "pattern = (\n",
+    "    re_not_character_or_beginning +\n",
+    "    (f'{re_not_character_or_end}|{re_not_character_or_beginning}').join(words_to_check_pp) + \n",
+    "    re_not_character_or_end\n",
+    ")\n",
+    "df_podcast[\"has_ml_word\"] = df_podcast.title.str.contains(pattern, case=False, regex=True).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "5d726283",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6: roman yampolskiy\n",
+      "dangers of superintelligent ai\n",
+      "\n",
+      "30: guillaume verdon\n",
+      "beff jezos, e/acc movement, physics, computation & agi\n",
+      "\n",
+      "37: elon musk\n",
+      "war, ai, aliens, politics, physics, video games, and humanity\n",
+      "\n",
+      "50: george hotz\n",
+      "tiny corp, twitter, ai safety, self-driving, and god\n",
+      "\n",
+      "51: marc andreessen\n",
+      "future of the internet, technology, and ai\n",
+      "\n",
+      "54: mark zuckerberg\n",
+      "future of ai at meta, facebook, instagram, and whatsapp\n",
+      "\n",
+      "56: chris lattner\n",
+      "future of programming and ai\n",
+      "\n",
+      "64: manolis kellis\n",
+      "evolution of human civilization and superintelligent ai\n",
+      "\n",
+      "69: eliezer yudkowsky\n",
+      "dangers of ai and the end of human civilization\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch = 0\n",
+    "increment = 9\n",
+    "\n",
+    "df = df_podcast.loc[\n",
+    "    (~df_podcast.guest.isin(data_science_guests_pp)) & (df_podcast.has_ml_word == 1)\n",
+    "]\n",
+    "\n",
+    "for _, (id, guest, title) in df.loc[:,[\"id\", \"guest\", \"title\"]].iloc[batch*increment: batch*increment + increment].iterrows():\n",
+    "    print(f\"{id}: {guest}\\n{title}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5415d1e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remaining_positive_id = [\n",
+    "\n",
+    "]"
    ]
   }
  ],
