[notebook] refacto + create dataset of relevance.

--- a/parse_lex.ipynb
+++ b/parse_lex.ipynb
@@ -22,7 +22,7 @@
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
-    "from utils import (\n",
+    "from scraping import (\n",
     "    parse_podcats, parse_transcript\n",
     ")"
    ]
@@ -48,13 +48,13 @@
     "res = requests.get(url_podcasts)\n",
     "html_content = res.content\n",
     "soup_podcasts = BeautifulSoup(html_content, 'html.parser')\n",
-    "\n",
+    "    \n",
     "podcasts = parse_podcats(soup_podcasts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "32169571-8ef4-420a-b6a1-673440f5bed5",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
        " Podcast(guest='Neil Adams', title='Judo, Olympics, Winning, Losing, and the Champion Mindset', url_transcript='https://lexfridman.com/neil-adams-transcript')]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
