--- a/classify_title.ipynb
+++ b/classify_title.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 85,
    "id": "7adfba29-1fb8-40d7-a35b-01322509e65e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/pierre/anaconda3/envs/lexscraper/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -26,12 +26,16 @@
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "from unidecode import unidecode\n",
+    "from typing import Sequence\n",
     "\n",
     "from transformers import BertTokenizer, BertForSequenceClassification\n",
     "import torch\n",
     "\n",
     "from scraping import (\n",
     "    parse_podcats\n",
+    ")\n",
+    "from nlp_utils import (\n",
+    "    hash_str\n",
     ")"
    ]
   },
@@ -55,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "fbac75cf-d5a7-43a1-92b5-091ab18de698",
    "metadata": {},
    "outputs": [],
@@ -64,16 +68,7 @@
     "html_content = res.content\n",
     "soup_podcasts = BeautifulSoup(html_content, 'html.parser')\n",
     "    \n",
-    "podcasts = parse_podcats(soup_podcasts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "32169571-8ef4-420a-b6a1-673440f5bed5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "podcasts = parse_podcats(soup_podcasts)\n",
     "titles = [p.title for p in podcasts]"
    ]
   },
@@ -182,19 +177,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 68,
    "id": "9a038dbb",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_podcast = pd.DataFrame(podcasts)\n",
-    "df_podcast.insert(0, 'id', df_podcast.reset_index(drop=True).index + 1)\n",
+    "\n",
     "\n",
     "cols_to_pp = [\"guest\", \"title\"]\n",
     "\n",
     "for col in cols_to_pp:\n",
     "    df_podcast[col] = np.vectorize(lambda title: unidecode(title))(df_podcast[col])\n",
-    "    df_podcast[col] = df_podcast[col].str.lower()"
+    "    df_podcast[col] = df_podcast[col].str.lower()\n",
+    "\n",
+    "# df_podcast.insert(0, 'id', df_podcast.reset_index(drop=True).index + 1)\n",
+    "hash_str_vec = np.vectorize(hash_str)\n",
+    "df_podcast.insert(0, 'id', hash_str_vec(df_podcast.guest + df_podcast.title))\n",
+    "\n",
+    "assert df_podcast.id.nunique() == len(df_podcast), \"colision in the hashing to create unique id!\""
    ]
   },
   {
@@ -212,13 +213,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 73,
    "id": "de92e506",
    "metadata": {},
    "outputs": [],
    "source": [
     "data_science_guests = [\n",
     "    \"Aravind Srinivas\",\n",
+    "    \"Andrej Karpathy\",\n",
     "    \"Sam Altman\",\n",
     "    \"Yann LeCun\",\n",
     "    \"Joscha Bach\",\n",
@@ -291,11 +293,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 140,
    "id": "20a21555",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def is_guest_relevant(guest_candidate: str, data_science_guests: Sequence[str]) -> bool:\n",
+    "    \"\"\"\n",
+    "    Check if any data science guest is contained in the given guest_candidate.\n",
+    "    Necessary because some guest_candidate contained multiple guests.\n",
+    "    \"\"\"\n",
+    "    return any(relevant_guest in guest_candidate for relevant_guest in data_science_guests)\n",
+    "\n",
+    "is_guest_relevant_vec = np.vectorize(\n",
+    "    is_guest_relevant,\n",
+    "    excluded=['data_science_guests'],\n",
+    "    signature='(),(n)->()'\n",
+    ")\n",
+    "df_podcast[\"has_relevant_guest\"] = is_guest_relevant_vec(df_podcast.guest, data_science_guests_pp).astype(int)\n",
+    "\n",
     "re_not_character_or_beginning = r'(?:[^a-z]|^)'\n",
     "re_not_character_or_end = r'(?:[^a-z]|$)'\n",
     "\n",
@@ -309,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 141,
    "id": "5d726283",
    "metadata": {},
    "outputs": [
@@ -317,31 +333,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6: roman yampolskiy\n",
+      "98195452: roman yampolskiy\n",
       "dangers of superintelligent ai\n",
       "\n",
-      "30: guillaume verdon\n",
+      "86440844: guillaume verdon\n",
       "beff jezos, e/acc movement, physics, computation & agi\n",
       "\n",
-      "37: elon musk\n",
+      "68071720: elon musk\n",
       "war, ai, aliens, politics, physics, video games, and humanity\n",
       "\n",
-      "50: george hotz\n",
+      "37124594: george hotz\n",
       "tiny corp, twitter, ai safety, self-driving, and god\n",
       "\n",
-      "51: marc andreessen\n",
+      "60879511: marc andreessen\n",
       "future of the internet, technology, and ai\n",
       "\n",
-      "54: mark zuckerberg\n",
+      "99072863: mark zuckerberg\n",
       "future of ai at meta, facebook, instagram, and whatsapp\n",
       "\n",
-      "56: chris lattner\n",
+      "41763735: chris lattner\n",
       "future of programming and ai\n",
       "\n",
-      "64: manolis kellis\n",
+      "68276965: manolis kellis\n",
       "evolution of human civilization and superintelligent ai\n",
       "\n",
-      "69: eliezer yudkowsky\n",
+      "62663336: eliezer yudkowsky\n",
       "dangers of ai and the end of human civilization\n",
       "\n"
      ]
@@ -351,24 +367,249 @@
     "batch = 0\n",
     "increment = 9\n",
     "\n",
-    "df = df_podcast.loc[\n",
-    "    (~df_podcast.guest.isin(data_science_guests_pp)) & (df_podcast.has_ml_word == 1)\n",
+    "df_to_check = df_podcast.loc[\n",
+    "    (df_podcast.has_relevant_guest == 0) & (df_podcast.has_ml_word == 1) \n",
     "]\n",
     "\n",
-    "for _, (id, guest, title) in df.loc[:,[\"id\", \"guest\", \"title\"]].iloc[batch*increment: batch*increment + increment].iterrows():\n",
+    "for _, (id, guest, title) in df_to_check.loc[:,[\"id\", \"guest\", \"title\"]].iloc[batch*increment: batch*increment + increment].iterrows():\n",
     "    print(f\"{id}: {guest}\\n{title}\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "id": "5415d1e7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "remaining_positive_id = [\n",
+    "manual_positive_id = [\n",
+    "    98195452,\n",
+    "    41763735,\n",
+    "    68276965,\n",
+    "    59789751,\n",
+    "    60449962,\n",
+    "    93271390,\n",
+    "    79695739,\n",
+    "    31945141,\n",
+    "    58779362,\n",
+    "]\n",
     "\n",
-    "]"
+    "df_podcast[\"manual_label\"] = df_podcast.id.isin(manual_positive_id).astype(int)\n",
+    "\n",
+    "df_podcast[\"label\"] = (\n",
+    "    df_podcast.manual_label | df_podcast.has_relevant_guest\n",
+    ").astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "58bd74bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>guest</th>\n",
+       "      <th>title</th>\n",
+       "      <th>url_transcript</th>\n",
+       "      <th>has_ml_word</th>\n",
+       "      <th>has_relevant_guest</th>\n",
+       "      <th>manual_label</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>381</th>\n",
+       "      <td>26277046</td>\n",
+       "      <td>ray dalio</td>\n",
+       "      <td>principles</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>281</th>\n",
+       "      <td>12126081</td>\n",
+       "      <td>max tegmark</td>\n",
+       "      <td>ai and physics</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>73511281</td>\n",
+       "      <td>nick lane</td>\n",
+       "      <td>origin of life, evolution, aliens, and biology</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>335</th>\n",
+       "      <td>80058926</td>\n",
+       "      <td>joscha bach</td>\n",
+       "      <td>artificial consciousness</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211</th>\n",
+       "      <td>29278313</td>\n",
+       "      <td>jeffrey shainline</td>\n",
+       "      <td>optoelectronic intelligence</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>76164777</td>\n",
+       "      <td>joscha bach</td>\n",
+       "      <td>life, intelligence, consciousness, ai &amp; the fu...</td>\n",
+       "      <td>https://lexfridman.com/joscha-bach-3-transcript</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>279</th>\n",
+       "      <td>39097670</td>\n",
+       "      <td>natalya bailey</td>\n",
+       "      <td>rocket engines and electric spacecraft propulsion</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>301</th>\n",
+       "      <td>99900770</td>\n",
+       "      <td>charles isbell</td>\n",
+       "      <td>computing, ai &amp; race in america</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>392</th>\n",
+       "      <td>13010577</td>\n",
+       "      <td>gary marcus</td>\n",
+       "      <td>hybrid of deep learning and symbolic ai</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>388</th>\n",
+       "      <td>94642723</td>\n",
+       "      <td>sean carroll</td>\n",
+       "      <td>quantum mechanics and many-worlds</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           id              guest  \\\n",
+       "381  26277046          ray dalio   \n",
+       "281  12126081        max tegmark   \n",
+       "118  73511281          nick lane   \n",
+       "335  80058926        joscha bach   \n",
+       "211  29278313  jeffrey shainline   \n",
+       "44   76164777        joscha bach   \n",
+       "279  39097670     natalya bailey   \n",
+       "301  99900770     charles isbell   \n",
+       "392  13010577        gary marcus   \n",
+       "388  94642723       sean carroll   \n",
+       "\n",
+       "                                                 title  \\\n",
+       "381                                         principles   \n",
+       "281                                     ai and physics   \n",
+       "118     origin of life, evolution, aliens, and biology   \n",
+       "335                           artificial consciousness   \n",
+       "211                        optoelectronic intelligence   \n",
+       "44   life, intelligence, consciousness, ai & the fu...   \n",
+       "279  rocket engines and electric spacecraft propulsion   \n",
+       "301                    computing, ai & race in america   \n",
+       "392            hybrid of deep learning and symbolic ai   \n",
+       "388                  quantum mechanics and many-worlds   \n",
+       "\n",
+       "                                      url_transcript  has_ml_word  \\\n",
+       "381                                             None            0   \n",
+       "281                                             None            1   \n",
+       "118                                             None            0   \n",
+       "335                                             None            0   \n",
+       "211                                             None            0   \n",
+       "44   https://lexfridman.com/joscha-bach-3-transcript            1   \n",
+       "279                                             None            0   \n",
+       "301                                             None            1   \n",
+       "392                                             None            1   \n",
+       "388                                             None            0   \n",
+       "\n",
+       "     has_relevant_guest  manual_label  label  \n",
+       "381                   0             0      0  \n",
+       "281                   1             0      1  \n",
+       "118                   0             0      0  \n",
+       "335                   1             0      1  \n",
+       "211                   0             0      0  \n",
+       "44                    1             0      1  \n",
+       "279                   0             0      0  \n",
+       "301                   1             0      1  \n",
+       "392                   1             0      1  \n",
+       "388                   0             0      0  "
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_podcast.sample(10)"
    ]
   }
  ],
