[notebook] Update classification notebooks.

--- a/notebooks/parse_lex.ipynb
+++ b/notebooks/parse_lex.ipynb
@@ -22,7 +22,7 @@
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
-    "from scraping import (\n",
+    "from podconcise.scraping import (\n",
     "    parse_podcats, parse_transcript\n",
     ")"
    ]
@@ -134,9 +134,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lexscaper_dev",
+   "display_name": "lexscraper",
    "language": "python",
-   "name": "lexscaper_dev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
